<resources>
    <string name="app_name">Fresco</string>

    <string name="TextView">TextView</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- General app term strings -->
    <string name="shopHeader_text">Shopping List:</string>
    <string name="ingredientsHeader_text">Ingredients:</string>
    <string name="ingredient_hint">Ingredient</string>
    <string name="amount_symbol">#</string>
    <string name="add_symbol">+</string>
    <string name="add_recipe_prompt">Add to My Recipes</string>
    <string name="recipe_title_hint">Recipe Name</string>
    <string name="recipe_instructions_hint">Optional Instructions</string>
    <string name="manageShopListHeader">Manage your shopping list here</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_title">Navigation Menu</string>
    <string name="action_settings">Settings</string>

    <!-- measurementTypes -->
    // measurement types: lb, oz, g, kg, cup, pint, quart, gallon, tsp, tbsp
    <string-array name="measurements_array">
        <item>unit(s)</item>
        <item>lb</item>
        <item>oz</item>
        <item>g</item>
        <item>mg</item>
        <item>kg</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>c</item>
        <item>pt</item>
        <item>qt</item>
        <item>gal</item>
        <item>mL</item>
        <item>L</item>
    </string-array>

</resources>
