<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_recipe"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.allison.fresco.fragments.AddRecipeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/recipe_title_hint"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:id="@+id/ingredient"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:hint="@string/ingredient_hint"
                android:layout_weight="0.88" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount_symbol"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/measurementType"
                android:layout_width="49dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_ingredient"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/add_symbol"/>

        </LinearLayout>


        <EditText
            android:id="@+id/recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_instructions_hint"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_weight="0.11">

            <TextView
                android:id="@+id/ingredients_list_label"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsHeader_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/ingredientsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextView" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_list"
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:scrollbars="vertical" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_recipe"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_prompt"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored" />
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="7dp" />

    </LinearLayout>

</LinearLayout>