<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shopping_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.allison.fresco.fragments.ShoppingListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/shoplist_ingredient"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:ems="10"
            android:hint="@string/ingredient_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/shoplist_amount"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:ems="10"
            android:hint="@string/amount_symbol"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/shoplist_measurementType"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="0.42" />

        <Button
            android:id="@+id/shoplist_add_ingredient"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:text="@string/add_symbol" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/shopHeader"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/shopHeader_text"
            android:textAppearance="@style/Widget.AppCompat.Button"
            android:visibility="visible" />

        <TextView
            android:id="@+id/shopCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shopping_list"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:scrollbars="vertical" />

</LinearLayout>